# cygnus

./: CMakeLists.txt  LICENSE  README.md
demo/: error.md  lexer.md  parser.md  symbol.md  type.md
doc/: grammar.md
src/: cli.cpp  cli.h  compiler.cpp  compiler.h  lang.h  log.cpp  log.h  main.cpp  util.cpp
src/ast/: node-template  node.cpp  node.h  visitor.h  visitorincl
src/parser/: lexer.cpp  lexer.h
src/semantic/: symdata.cpp  symdata.h  symtable.cpp  symtable.h  type.cpp  type.h  typecheck.cpp  typecheck.h
src/syntax/: lang.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
src/util/: error.cpp  error.h  noderange.cpp  noderange.h  print_visitor.cpp  print_visitor.h  printer.cpp  printer.h  stringifier.cpp  stringifier.h  stringify_visitor.cpp  stringify_visitor.h  treeprinter.cpp  treeprinter.h  util.cpp  util.h
test/: expression.cy  main.cpp
test/lang/: comments.cy  example.cy  expression.cy  fizzbuzz.cy  function.cy  statements.cy  symbols.cy  tokens.cy  types.cy
tools/: nodegen.py
